--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-bitsandbytes>=0.48.2
+bitsandbytes>=0.49.1
 Flask>=3.1.2
-numpy>=1.26.4
+numpy>=2.3.5
 safetensors>=0.7.0
-torch==2.5.1
+torch==2.7.1
 torchao==0.12.0
-torchvision>=0.20.1
-transformers>=4.53.3
-pillow>=12.0.0
-xformers==0.0.28.post3
-compel
+torchvision>=0.22.1
+transformers>=4.57.6
+pillow>=12.1.0
+xformers==0.0.31.post1
+compel==2.3.1
+sdnq>=0.1.4
+optimum-quanto==0.2.6
